# Story-on-Board

./: .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  LICENSE  README.md  app.py  deploy.sh  narrator.py  visualizer.py
story-on-board-github/: CHANGES.md  Dockerfile  README.md  SAFETY.md  director_v2.py  filmmaker.py  index.html  pyproject.toml  requirements.txt  scriptwriter.py  validator.py
